# NexusAgent

./: README.md  main.py  pyproject.toml  setup.py
configs/: configuration.py  mcp_server.py  model_configs.py  request_configs.py
frontend/: frontend_main.py
markdown/: system_massage.md
routes/: agent.py
tools/: __init__.py  agent_tools.py  custom_tools.py  institution_func.py  user_func.py
utils/: custom_tools.py  data_models.py  file_tools.py  llms.py  logger_manager.py  memory_service.py  message_tools.py  redis_manager.py  rsa_encryption.py  tools.py
