[project]
name = "nexusagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "concurrent-log-handler>=0.9.28",
    "dashscope>=1.24.8",
    "fastapi>=0.120.0",
    "ipykernel>=7.0.1",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.1",
    "langchain-deepseek>=1.0.0",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-postgres>=3.0.0",
    "redis>=7.0.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "setuptools>=80.9.0",
]
